# AI-data-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  ai-data-assistant-homework.md  docker-compose.yml  pyproject.toml
db/: 01_schema.sql  02_seed.sql
scripts/: generate_seed.py
src/: main.py
src/api/: deps.py  errors.py  middleware.py  schemas.py
src/api/routers/: ask.py  health.py  metrics.py
src/application/use_cases/: ask_question.py
src/domain/: entities.py  exceptions.py  ports.py
src/infrastructure/: config.py
src/infrastructure/db/: pool.py  schema_provider.py  sql_executor.py
src/infrastructure/llm/: openai_client.py  prompt.py
src/infrastructure/observability/: __init__.py  metrics.py
src/infrastructure/sql/: guard.py
tests/: conftest.py  test_api.py  test_ask_use_case.py  test_llm_parse.py  test_schema_render.py  test_sql_executor.py  test_sql_guard.py
