[project]
name = "ai-data-assistant"
version = "0.1.0"
description = "Ask questions to a PostgreSQL database in natural language. LLM builds SQL, the service runs it and returns the data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "prometheus-client>=0.21",
    "sqlglot>=25.24",
]

[project.optional-dependencies]
seed = [
    "faker>=30.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient httpx deprecation — not actionable for us.
    "ignore::DeprecationWarning:starlette.testclient",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
